# to-herd-cats

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00e42d915fe8_add_memories_table_for_agent_memory.py  17345c9ace52_llm_connections_table.py  1fbd919c0e04_agent_table.py  57825f870e54_trigger_last_fired_at_for_scheduler.py  580f95bd1819_mcp_servers_and_tools.py  637b054bf6fa_triggers_and_roles.py  7ace07be6f59_data_sources_templates_channels.py  8ee465aa1681_settings_table.py  daf726875ade_agent_created_by.py  dcdcf34e3376_runs_table.py  eb41f85e055c_skills_table.py  f32da7c24fb6_inbox_items_table.py
backend/app/: __init__.py  demo_seed.py  main.py
backend/tests/: conftest.py  test_agents_api.py  test_agents_ownership.py  test_agents_repo.py  test_authz.py  test_autonomous.py  test_channel_delivery.py  test_channels_api.py  test_checkpointer.py  test_compare_api.py  test_cors.py  test_data_sources_api.py  test_demo_seed.py  test_events.py  test_health.py  test_inbox_api.py  test_litellm_gateway.py  test_llm_connections_api.py  test_mcp_discover_api.py  test_mcp_gateway.py  test_mcp_servers_api.py  test_memory_api.py  test_metrics.py  test_oidc.py  test_retrieval_api.py  test_roles_api.py  test_runs_api.py  test_scheduler.py  test_secret_ref.py  test_seed.py  test_settings_api.py  test_skills_api.py  test_skills_run.py  test_structured_output_api.py  test_templates_api.py  test_tool_approval_api.py  test_tool_loop_api.py  test_tools_api.py  test_triggers_api.py
(+161 files in other folders)
